# iriam-rag

./: .gitpod.yml  Dockerfile  README.md  answer.py  claude.py  main.py  proto_rag.py  requirements.txt  scraping.py
claude/: requirements.txt  sample_by_claude.py
scripts/: build_index.py  crawler.py  pyproject.toml  requirements.txt
scripts/data/: crawled_data.csv
scripts/data/faiss_index/: index.faiss  index.pkl
